--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
-[workspace]
-members = [
-    "chip8-rs",
-    "libchip8"
-]
+[package]
+name = "chip8"
+description = "Chip-8 Interpreter
+authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
+version = "0.1.0"
+edition = "2021"
 
-resolver = "2"
+[dependencies]
+clap = { version = "4.4.11", features = ["derive"] }
