fix submodule and actions

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -6,11 +6,18 @@ jobs:
   clippy-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          submodules: true
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: clippy
+          components:
+            - clippy
           override: true
 
       - uses: actions-rs/clippy-check@v1
