--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,7 +7,12 @@ jobs:
   cargo-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          submodules: true
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
