--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,17 @@ clap = { version = "4.4.11", features = ["derive"] }
 log = "0.4.17"
 tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = ["time"] }
-winit = { version = "0.27.2"}
-wgpu = { version = "0.13.1" }
+winit = { version = "0.29.7", features = ["rwh_05"] }
+wgpu = { version = "0.18.0" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.35.1", features = ["full"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
-console_log = "0.2.0"
+console_log = "1.0.0"
 tracing-wasm = "0.2.1"
-wgpu = { version = "0.13.1", features = ["webgl"] }
+wgpu = { version = "0.18.0", features = ["webgl"] }
 wasm-bindgen = "0.2.89"
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.50", features = ["Document", "Window", "Element"] }
