--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,5 +24,11 @@ jobs:
         run: cargo install cargo-tarpaulin
 
       - name: Run coverage
-        run: cargo tarpaulin --engine llvm --follow-exec --post-test-delay 10 --coveralls ${{ secrets.COVERALLS_TOKEN }} 
-
+        run: |
+          cargo tarpaulin \
+          --engine llvm \
+          --follow-exec \
+          --post-test-delay 10 \
+          --coveralls ${{ secrets.COVERALLS_TOKEN }} \
+          --workspace \
+          --exclude chip8-rs-micro
