--- a/chip8-rs/Cargo.toml
+++ b/chip8-rs/Cargo.toml
@@ -11,11 +11,11 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 cfg-if = "1.0.0"
-chip8 = { path = "../chip8", features = ["wgpu"] }
+chip8 = { path = "../chip8" }
 clap = { version = "4.4.11", features = ["derive"] }
-log = "0.4.17"
-tracing = "0.1.36"
-tracing-subscriber = { version = "0.3.15", features = ["time"] }
+log = "0.4.20"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["time"] }
 winit = { version = "0.29.7", features = ["rwh_05"] }
 wgpu = { version = "0.18.0" }
 rand = "0.8.5"
