--- a/chip8/Cargo.toml
+++ b/chip8/Cargo.toml
@@ -5,9 +5,5 @@ authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
 
-[features]
-default = []
-wgpu = ["dep:wgpu"]
-
 [dependencies]
-wgpu = { version = "0.18.0", optional = true, default-features = false }
+tracing = "0.1.40"
