start putting together pixel vertex generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["chip8", "chip8-rs", "chip8-rs-micro"]
-default-members = ["chip8", "chip8-rs"]
+members = ["chip8", "chip8-rs"]
