--- a/chip8-rs/Cargo.toml
+++ b/chip8-rs/Cargo.toml
@@ -10,6 +10,7 @@ name = "chip8_rs_ui"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+bytemuck = { version = "1.7.0", features = ["derive"] }
 cfg-if = "1.0.0"
 chip8 = { path = "../chip8" }
 clap = { version = "4.4.11", features = ["derive"] }
@@ -19,6 +20,7 @@ tracing-subscriber = { version = "0.3.18", features = ["time"] }
 winit = { version = "0.29.7", features = ["rwh_05"] }
 wgpu = { version = "0.18.0" }
 rand = "0.8.5"
+test-case = "3.3.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.35.1", features = ["full"] }
