--- a/chip8-rs/Cargo.toml
+++ b/chip8-rs/Cargo.toml
@@ -6,15 +6,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bytemuck = { version = "1.7.0", features = ["derive"] }
 cfg-if = "1.0.0"
 chip8 = { path = "../chip8" }
 clap = { version = "4.4.11", features = ["derive"] }
 log = "0.4.20"
+pixels-wgpu = { git = "https://github.com/mrivnak/pixels-wgpu", rev = "v0.1.0" }
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["time"] }
 winit = { version = "0.29.7", features = ["rwh_05"] }
-wgpu = { version = "0.19.0" }
-rand = "0.8.5"
 test-case = "3.3.1"
