--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,6 +1,14 @@
 name: Clippy Linter
 
-on: push
+on:
+  push:
+    branches:
+      - '*'
+      - '!v*'
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
   clippy-check:
