--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,11 @@ jobs:
           cargo build --release --target x86_64-pc-windows-msvc
           Compress-Archive -Path ./target/x86_64-pc-windows-msvc/release/chip8-rs.exe -DestinationPath ./release/chip8-rs_${{ github.ref_name }}_windows_amd64.zip
 
+      - name: Check prerelease
+        id: check-prerelease
+        run: |
+          pip3 install semver
+          python3 -c "import semver; print('prerelease=true') if semver.Version.parse('${{ github.ref_name }}'.replace('v', '')).prerelease else print('prerelease=false')" >> $GITHUB_OUTPUT
 
       - name: Build Changelog
         id: github_release
@@ -86,6 +91,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           body: ${{ steps.github_release.outputs.changelog }}
+          prerelease: ${{ steps.check-prerelease.outputs.prerelease }}
           fail_on_unmatched_files: false
           files: |
             ./release/*.zip
