--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,8 +3,7 @@ name: Cargo Check
 on:
   push:
     branches:
-      - '*'
-      - '!v*'
+      - 'main'
   pull_request:
     types:
       - opened
