--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,15 +2,39 @@ name: Cargo Check
 
 on:
   push:
+    branches:
+      - 'main'
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
   cargo-check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - name: Cargo Check
-      run: cargo check
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          submodules: true
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+
+      - name: Install Rust wasm32-unknown-unknown
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+
+      - name: Install Just
+        uses: extractions/setup-just@v1
+
+      - name: Cargo Check
+        run: |
+          mkdir -p res/roms
+          touch res/roms/pong.ch8 # empty file to prevent error
+          just check
