--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,17 +1,33 @@
 name: Clippy Linter
 
-on: push
+on:
+  push:
+    branches:
+      - 'main'
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
   clippy-check:
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-            toolchain: stable
-            components: clippy
-            override: true
+          fetch-depth: 1
+          submodules: true
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy
+          override: true
+
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
