--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,22 +1,36 @@
 name: Coverage
+
 on:
   push:
     branches:
-      - "*"
+      - "main"
+
 env:
   RUST_BACKTRACE: 1
+
 jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: dtolnay/rust-toolchain@master
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          submodules: true
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      
+
       - name: Install tarpaulin
         run: cargo install cargo-tarpaulin
 
       - name: Run coverage
-        run: cargo tarpaulin --engine llvm --follow-exec --post-test-delay 10 --coveralls ${{ secrets.COVERALLS_TOKEN }} 
-
+        run: |
+          cargo tarpaulin \
+          --engine llvm \
+          --follow-exec \
+          --post-test-delay 10 \
+          --coveralls ${{ secrets.COVERALLS_TOKEN }} \
+          --workspace
